# pathtracer

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  ae_graphics-config.cmake
src/camera/: camera.h
src/core/: la.h  point.h  util.h  vector.h
src/geometry/: fixed_polygon.h  geometry.h  point.h  polygon.h  primitive.cc  primitive.h  quad.h  surface.h  triangle.h
src/importers/: obj_loader.h
src/intersection/: bound.h  geometry.h  intersectable.h  intersection.h  ray.h  triangle.h
src/raytrace/: camera.h  context.h  traversal.h
src/spatial_acceleration/: bound.h  boundable.h  bvh_tree.h  bvh_tree.inl  config.h  geometry.h  morton.h  node.h  primitive.h  spatial_tree.h  spatial_tree.inl  triangle.h
src/viewport/: pixel_view.cc
test/: CMakeLists.txt  depth_trace.cc  la.cc  load_obj.cc  spatial_acceleration.cc  trace.cc  tree_build.cc
